--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <li><a href="#pas01-sec">ツールパスの作成　面切削</a></li>
       <li><a href="#pas02-sec">ツールパスの作成　粗削り</a></li>
       <li><a href="#pas03-sec">ツールパスの作成　45°斜め切削</a></li>
+      <li><a href="#pas04-sec">ツールパスの作成　ドリル穴開け加工</a></li>
     </ul>
 
   <section id="first-sec">
@@ -287,7 +288,78 @@ X軸の方向に直交する面を選択する。<br>
 <img src="42.png" alt="42" width="100%" /><br>
 <img src="43.png" alt="43" width="100%" /><br><br><br>
 以上の手順をあと３回、残った３つの面に対しても行うと、上下8つの辺の面取り加工の
-ツールパスが完成する。のこり３つは割愛する。
+ツールパスが完成する。のこり３つは割愛する。<br><br><br>
+
+<section id="pas04-sec">
+  <h2>ツールパスの作成　ドリル穴開け加工</h2>
+次に、サイコロの目の穴を開ける加工のツールパスの作成方法について説明する。<br>
+まず画面上のアイコンから、「ドリル」をクリックする。
+<img src="44.jpg" alt="44" width="100%" /><br><br><br>
+
+右に小さいウィンドウが出たら、まず工具の「選択」ボタンをクリックする。<br>
+<img src="45.jpg" alt="45" width="100%" /><br><br><br>
+
+ドリルの一覧が表示されるので使用するドリルを選択する。ここではセンタドリルを選択して、下穴の加工を行う。
+<img src="46.png" alt="46" width="100%" /><br><br><br>
+
+「形状」タブに移り、「選択モード」を「選択された点」にする。開ける穴の口のエッジの円をクリックすると
+その円の中心点が穴を開ける点として選択される。５つの円全てを選択する。
+<img src="47.jpg" alt="47" width="100%" /><br><br><br>
+
+「高さ」タブに移り、下の画面と同じように始点とオフセット値を決定する。一応各設定箇所について説明しておく。<br>
+ボトム高さは穴を何mmの深さまで掘るかの高さを指定する。<br>
+トップ高さは何mmの高さから掘り始めるのかの高さを指定する。穴を開ける前の材料の上面の高さになるようにする。<br>
+送り高さ、退避高さ、移動高さはすべてトップから5mm上になっているが、これは今回使用する想定の
+静岡鐵工所製BT-30N型５軸マシニングセンタがZの高さの可動範囲が極めて小さいために材料から5mm上になっている。
+もっと大型の加工機であればもっと高い位置に設定したほうがよい。<br>
+各高さは、始点で基準点を決めてそこからオフセットに入力した値だけ高い場所が指定される。
+<img src="48.jpg" alt="48" width="100%" /><br><br><br>
+
+「パス」タブに移り、サイクルタイプを「早送り退出」にする。<br>
+今回はセンタドリルによる下穴開けの加工で、深さも2mmしかないので、早送り退出で加工を行う。
+<img src="49.jpg" alt="49" width="100%" /><br><br><br>
+
+OKボタンを押すとこのように、緑色で穴を開けた後の形状が表示されるはず。
+<img src="50.png" alt="50" width="100%" /><br><br><br>
+
+次に側面にも穴を開けていくのですが、側面に穴を開ける際のワーク座標原点をサイコロの側面の中央に設定したいのですが、
+４の面と６の面には中央に穴が無く点を選択できないので、一度製造からデザインに戻って、４の面と６の面の中央に点を
+スケッチしておいてください。
+<img src="51.png" alt="51" width="100%" /><br><br><br>
+
+そうしたらまた製造に戻って、ドリルをクリック。
+<img src="52.jpg" alt="52" width="100%" /><br><br><br>
+
+先ほど５の面を加工した直後なので引き続きセンタドリルが選択されているはずです。<br>
+「複合軸」タブに移って、「工具方向」にチェックを入れます。ここでは工具（材料）の向きを指定できます。
+今度は材料の側面に穴をあけるので、材料を90度傾けることになります。そのときの加工機の様子をイメージしながら、
+Z軸のすぐ右のボタンを押してZ軸と垂直になる面、X軸のすぐ右のボタンを押してX軸と垂直になる面を選択してください。<br>
+また、このときのワーク座標原点をどこにするのかも指定してください。
+<img src="53.png" alt="53" width="100%" /><br><br><br>
+
+そのほかのタブでの操作は先ほど５の面の穴あけのときと同じです。画面の通りにしてください。
+<img src="54.png" alt="54" width="100%" /><br>
+<img src="55.png" alt="55" width="100%" /><br>
+<img src="56.png" alt="56" width="100%" /><br><br><br>
+
+OKを押すとこのようになるはずです。その他、３、４、１の面に関しては今での手順と全く同じであるため、割愛します。
+<img src="57.png" alt="57" width="100%" /><br><br><br>
+
+次に、さっきセンタドリルであけた穴と全く同じ位置に、直径3mmの普通のドリルで深さ10mmの穴を開けていきます。<br>
+同じく、「ドリル」アイコンをクリックしてドリル穴あけ加工のウインドウを出したら、工具の選択で直径3mmのドリルを選択します。
+なければ新規作成してください。<a href="#tool-sec">工具の新規作成方法</a>参照です。
+<img src="58.png" alt="58" width="100%" /><br><br><br>
+
+複合軸タブ、形状タブは今までと全く同じ手順なので割愛します。<br>
+高さタブのボトム高さの所で、穴の深さだけ、10mmに変更しておいてください。
+<img src="59.png" alt="59" width="100%" /><br><br><br>
+
+また、パスタブでサイクルタイプを「深穴ドリル 完全退避」などの、深い穴を開けるときの、退避動作があるものに変更してください。
+ペック高さは何mmずつ掘り進むかの値なので、ペック高さに入力した分だけ掘り進めるごとに退避運動を行います。<br>
+加工機や穴の形状、使う工具や削る材料などに応じて適切な値を入力してください。
+<img src="60.png" alt="60" width="100%" /><br><br><br>
+<br>
+
 
 
   
