--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
 値を変更して材料の固定位置を調整する。
 <img src="07.png" alt="07" width="100%" /><br><br><br>
 
-以上で「設定」で操作しなくてはいけない手順は全てだ。OKを押して設定を完了
+次に、「ポスト処理」タブに移り、使用するワーク座標系を設定する。このWCSオフセットの値は、
+1と入力するとG54、2だとG55、3だとG56・・・というように対応している。今回、材料を
+傾けずに加工する際はワーク座標系G54を使用すると仮定して、1と入力しておく。
+<img src="S000.png" alt="S000" width="100%" /><br><br><br>
+
+以上で「設定」で操作しなくてはいけない手順は全てです。OKを押して設定を完了
 すると選択した加工機の3Dモデルが出現する。
 <img src="08.png" alt="08" width="100%" /><br><br><br>
 
@@ -244,7 +249,25 @@
 <section id="pas03-sec"></section>
   <h2>ツールパスの作成　45°斜め切削</h2>
 次に、材料を45度傾けた状態で、ダイスの上面と底面の45°面取りの加工をするツールパスを作成する。<br>
-まず作業スペースを「デザイン」に変更して、いくつかスケッチを作成する。まずはスケッチでダイスの
+さきほどまでは、材料を傾けない状態での加工で、ワーク座標系G54を使用していたが、45度傾けてでの
+加工では別のワーク座標系を使用する。<br>
+このために新しく設定をもう１つ新規作成する。まず「設定」アイコンをクリック
+<img src="S00.png" alt="S00" width="100%" /><br><br><br>
+
+設定タブでモデルの選択ボタンをクリックして、サイコロのモデルのコンポーネントをクリックして選択する。
+<img src="S01.png" alt="S01" width="100%" /><br><br><br>
+
+パーツの位置タブでの設定項目は、一番最初に作った設定と全く同じにする。
+<img src="S02.png" alt="S02" width="100%" /><br><br><br>
+
+ポスト処理タブに移り、WCSオフセットで、使用するワーク座標系を選択する。先の設定ではG54を使用する
+想定だったので１だったが、今回はG56を使用すると仮定して、3と入力しておく。
+<img src="S03.png" alt="S03" width="100%" /><br><br><br>
+
+OKを押して設定を作ったあと、設定の名前を使用しているワーク座標系にしておくとわかりやすい。
+<img src="S04.png" alt="S04" width="100%" /><br><br><br>
+
+設定ができたら、作業スペースを「デザイン」に変更して、いくつかスケッチを作成する。まずはスケッチでダイスの
 立方体の中心に点を作図する。手順は以下画像参照。
 <img src="31.png" alt="31" width="100%" /><br>
 <img src="32.png" alt="32" width="100%" /><br><br><br>
@@ -322,7 +345,14 @@ X軸の方向に直交する面を選択する。<br>
 OKボタンを押すとこのように、緑色で穴を開けた後の形状が表示されるはず。
 <img src="50.png" alt="50" width="100%" /><br><br><br>
 
-次に側面にも穴を開けていくのですが、側面に穴を開ける際のワーク座標原点をサイコロの側面の中央に設定したいのですが、
+次に、側面に穴を開けていきます。今度は材料を90度倒すので、また別のワーク座標系を使います。<br>
+斜め45度で切削した時と同じくまた設定を作ります。設定アイコンクリック。先ほどの45度切削の際にG56ワーク座標系の設定を
+つくったのと同じ手順で操作して、ポスト処理タブでWCSオフセットを2に設定します。（G55を使用すると仮定しています）
+<img src="S01.png" alt="S01" width="100%" /><br>
+<img src="S02.png" alt="S02" width="100%" /><br>
+<img src="S05.png" alt="S05" width="100%" /><br><br><br>
+
+設定ができたら、側面に穴を開ける際のワーク座標原点をサイコロの側面の中央に設定したいのですが、
 ４の面と６の面には中央に穴が無く点を選択できないので、一度製造からデザインに戻って、４の面と６の面の中央に点を
 スケッチしておいてください。
 <img src="51.png" alt="51" width="100%" /><br><br><br>
@@ -357,7 +387,11 @@ OKを押すとこのようになるはずです。その他、３、４、１の
 また、パスタブでサイクルタイプを「深穴ドリル 完全退避」などの、深い穴を開けるときの、退避動作があるものに変更してください。
 ペック高さは何mmずつ掘り進むかの値なので、ペック高さに入力した分だけ掘り進めるごとに退避運動を行います。<br>
 加工機や穴の形状、使う工具や削る材料などに応じて適切な値を入力してください。
-<img src="60.png" alt="60" width="100%" /><br><br><br>
+<img src="60.png" alt="60" width="100%" /><br>
+側面にも3mmのドリルで穴を開けていきますが、穴の深さとサイクルタイプ以外は全てさっきのセンタドリルと全く同じ手順なので割愛します。<br>
+同じようにG55ワーク座標系を使用するための設定を新規作成してから工具方向を90度傾けて穴を選択して高さを指定してください。
+
+
 <br>
 
 
